gitops/apps/garage/garage-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: garage
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "s3.vps.kubespaces.cloud"  # Change this to your actual domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage-garage
          port: 3900
